test/regress/coverage-periodic-unbalanced.test
; Coverage test for textual_xacts.cc lines 276-278
; Periodic transaction that fails to balance

~ Monthly
    Expenses:Food    $10.00
    Assets:Cash      $10.00

2024/01/01 Test
    Expenses:Food            $5.00
    Assets:Cash

test bal -> 1
__ERROR__
While parsing file "$FILE", line 6:
Unbalanced remainder is:
              $20.00
Amount to balance against:
              $20.00
While parsing periodic transaction:
> ~ Monthly
>     Expenses:Food    $10.00
>     Assets:Cash      $10.00
Error: Transaction does not balance
end test
